--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dev = [
 ]
 [tool.setuptools]
 include-package-data = true
+packages = ["nvbenjo"]
 [tool.setuptools.package-data]
 nvbenjo = ["conf/*.yml", "conf/*.yaml"]
 [tool.ruff]
