--- a/tests/conf/default.yaml
+++ b/tests/conf/default.yaml
@@ -1,13 +1,11 @@
 defaults:
   - base_config
-  - override hydra/job_logging: colorlog
-  - override hydra/hydra_logging: colorlog
+  - _self_
 
 nvbenjo:
   enable: true
   measure_memory: true
   torch_profile: false
-  output_dir_name: null
   models:
   - name: shufflenet
     type_or_path: shufflenet_v2_x0_5
