--- a/tests/conf/torch_load.yaml
+++ b/tests/conf/torch_load.yaml
@@ -1,13 +1,11 @@
 defaults:
   - base_config
-  - override hydra/job_logging: colorlog
-  - override hydra/hydra_logging: colorlog
+  - _self_ 
 
 nvbenjo:
   enable: true
   measure_memory: true
   torch_profile: false
-  output_dir_name: null
   models:
   - name: dummytorchmodel
     type_or_path: replaceme
