--- a/nvbenjo/conf/default.yaml
+++ b/nvbenjo/conf/default.yaml
@@ -1,4 +1,11 @@
 defaults:
   - base_config
+  - _self_
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
+
+output_dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+
+hydra:
+  run:
+    dir: ${output_dir}
