--- a/tests/conf/torch_load_multiinput.yaml
+++ b/tests/conf/torch_load_multiinput.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - default
-  - _self_
+  - base_config
+  - _self_ 
 
 nvbenjo:
   enable: true
@@ -10,11 +10,12 @@ nvbenjo:
   - name: dummytorchmodel
     type_or_path: replaceme
     kwargs: {}
-    shape: [{"input_name": "x", "shape": ["B", 10], "dtype": "float", min_max: [0, 0.5]}]
+    shape: [[B, 10], [B, 20]]
     num_warmup_batches: 1
     num_batches: 2
     batch_sizes:
     - 1
+    - 2
     device_indices:
     - 0
     precisions:
