--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
           python-version-file: "pyproject.toml"
       
       - name: Install the project
-        run: uv sync --all-extras
+        run: uv sync --extra dev --extra onnx-cpu
       
       - name: Run tests
         run: uv run pytest
