--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -18,3 +18,13 @@ jobs:
           args: "format --check"
           src: "./nvbenjo"
 
+  ty-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Run ty
+        run: uvx ty check .
