--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
+      - name: Install the project
+        run: uv sync --extra dev --extra onnx-cpu
+
       - name: Run ty
-        run: uvx ty check .
+        run: uv run ty check .
