Add tests for non-onnx environment

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,14 @@ jobs:
         with:
           python-version-file: "pyproject.toml"
       
-      - name: Install the project
+      - name: Install the project with onnx
         run: uv sync --extra dev --extra onnx-cpu
+      
+      - name: Run tests
+        run: uv run pytest
+
+      - name: Install the project without onnx
+        run: uv sync --extra dev
       
       - name: Run tests
         run: uv run pytest
