--- a/tests/conf/duplicate_model_name.yaml
+++ b/tests/conf/duplicate_model_name.yaml
@@ -20,8 +20,8 @@ nvbenjo:
     batch_sizes:
     - 1
     - 2
-    device_indices:
-    - 0
+    devices:
+    - "cpu"
     precisions:
     - FP32
   - name: shufflenet
@@ -37,7 +37,7 @@ nvbenjo:
     batch_sizes:
     - 1
     - 2
-    device_indices:
-    - 0
+    devices:
+    - "cpu"
     precisions:
     - FP32
