--- a/tests/conf/small_single.yaml
+++ b/tests/conf/small_single.yaml
@@ -20,7 +20,7 @@ nvbenjo:
     num_batches: 1
     batch_sizes:
     - 1
-    device_indices:
-    - 0
+    devices:
+    - "cpu"
     precisions:
     - FP32
