--- a/nvbenjo/conf/huggingface.yaml
+++ b/nvbenjo/conf/huggingface.yaml
@@ -11,7 +11,7 @@ nvbenjo:
         num_warmup_batches: 1
         num_batches: 2
         batch_sizes: [8, 16, 32]
-        device_indices: [0]
+        devices: ["cuda:0"]
         precisions: [FP16, FP32, AMP_FP16]
       - name: gpt2
         type_or_path: huggingface:openai-community/gpt2
@@ -20,7 +20,7 @@ nvbenjo:
         num_warmup_batches: 5
         num_batches: 20
         batch_sizes: [16, 32]
-        device_indices: [0]
+        devices: ["cuda:0"]
         precisions: [BFLOAT16, FP32]
       # - name: llama
       #   type_or_path: huggingface:openlm-research/open_llama_7b
@@ -29,5 +29,5 @@ nvbenjo:
       #   num_warmup_batches: 5
       #   num_batches: 20
       #   batch_sizes: [1, 2]
-      #   device_indices: [0]
+      #   devices: ["cuda:0"]
       #   precisions: [BFLOAT16, FP32]
