--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = [{"name" = "lukas_jkl"}]
 description = "Benchmark utility for NVIDIA GPU's"
 readme = "README.md"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.10,<3.14"
 dependencies = [
   "torchvision",
   "torchaudio",
@@ -36,6 +36,7 @@ dev = [
     "ipython",
     "pytest",
     "ty",
+    "nox"
 ]
 [tool.setuptools]
 include-package-data = true
