--- a/tests/conf/duplicate_model_name.yaml
+++ b/tests/conf/duplicate_model_name.yaml
@@ -8,7 +8,7 @@ nvbenjo:
   torch_profile: false
   models:
   - name: shufflenet
-    type_or_path: shufflenet_v2_x0_5
+    type_or_path: torchvision:shufflenet_v2_x0_5
     kwargs: {}
     shape:
     - B
@@ -25,7 +25,7 @@ nvbenjo:
     precisions:
     - FP32
   - name: shufflenet
-    type_or_path: shufflenet_v2_x0_5
+    type_or_path: torchvision:shufflenet_v2_x0_5
     kwargs: {}
     shape:
     - B
