Cleanup nvbenjo config

--- a/tests/conf/input_min_max.yaml
+++ b/tests/conf/input_min_max.yaml
@@ -3,9 +3,8 @@ defaults:
   - _self_
 
 nvbenjo:
-  enable: true
   measure_memory: true
-  torch_profile: false
+  profile: false
   models:
   - name: dummytorchmodel
     type_or_path: replaceme
