--- a/nvbenjo/conf/small.yaml
+++ b/nvbenjo/conf/small.yaml
@@ -4,21 +4,17 @@ defaults:
 
 nvbenjo:
   models:
-      - name: shufflenet
-        type_or_path: shufflenet_v2_x0_5
+      shufflenet:
+        type_or_path: torchvision:shufflenet_v2_x0_5
         kwargs: {}
-        shape:
-        - B
-        - 3
-        - 224
-        - 224
+        shape: [B, 3, 224, 224]
         num_warmup_batches: 1
         num_batches: 2
-        batch_sizes:
-        - 8
-        - 16
+        batch_sizes: [8, 16]
         devices:
         - "cpu"
-        precisions:
-        - FP32
-        - FP16
+        runtime_options:
+          FP32:
+            precision: FP32
+          FP16:
+            precision: FP16
