--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = [{"name" = "lukas_jkl"}]
 description = "Benchmark utility for NVIDIA GPU's"
 readme = "README.md"
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<3.15"
 dependencies = [
   "torchvision",
   "torchaudio",
@@ -20,15 +20,8 @@ dependencies = [
 ]
 [project.scripts]
 nvbenjo = "nvbenjo.cli:nvbenjo"
-[project.optional-dependencies]
-onnx-cpu = [
-    "onnx>=1.14.0",
-    "onnxruntime>=1.15.0",
-]
-onnx-gpu = [
-    "onnx>=1.14.0",
-    "onnxruntime-gpu>=1.15.0",
-]
+#[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "pytest",
     "pytest-cov",
@@ -38,11 +31,25 @@ dev = [
     "ty",
     "nox"
 ]
+onnx-cpu = [
+    "onnx>=1.14.0",
+    "onnxruntime>=1.15.0",
+]
+onnx-gpu = [
+    "onnx>=1.14.0",
+    "onnxruntime-gpu>=1.15.0",
+]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 [tool.setuptools]
 include-package-data = true
-packages = ["nvbenjo"]
+[tool.setuptools.packages.find]
+where = ["src"]
 [tool.setuptools.package-data]
 nvbenjo = ["conf/*.yml", "conf/*.yaml"]
+
 [tool.ruff]
 line-length = 120
 [tool.ruff.lint.pydocstyle]
