Add onnx profiling

--- a/src/nvbenjo/conf/onnx.yaml
+++ b/src/nvbenjo/conf/onnx.yaml
@@ -16,3 +16,5 @@ nvbenjo:
         DEFAULT:
           intra_op_num_threads: 2
           graph_optimization_level: ORT_ENABLE_BASIC
+          enable_profiling: true
+          profiling_prefix: "resnet_profile"
