--- a/src/nvbenjo/conf/onnxsilero.yaml
+++ b/src/nvbenjo/conf/onnxsilero.yaml
@@ -5,13 +5,18 @@ defaults:
 nvbenjo:
   models:
       silero:
+        # see https://github.com/snakers4/silero-models/blob/master/models.yml
         # wget https://models.silero.ai/models/tts/en/v3_en_silero_tts_fp16.onnx -O ~/Downloads/silero_model_fp16.onnx
-        type_or_path: ~/Downloads/silero_model_fp16.onnx
+        type_or_path: ~/Downloads/silero_model_stt_v5.onnx
         shape:
           - {name: "input", shape: [B, 512], "type": "float", min_max: [0, 1]}
-          - {name: "sr", shape: [], type: "int64", value: 16000}
-          - {name: "state", shape: [2, "B", 128], type: "float", value: 0}
         num_warmup_batches: 5
         num_batches: 20
         batch_sizes: [1, 8, 16, 128]
         devices: ["cuda:0", "cpu"]
+        runtime_options:
+          DEFAULT:
+            intra_op_num_threads: 4
+            graph_optimization_level: ORT_ENABLE_EXTENDED
+            enable_profiling: true
+            # profiling_prefix: "silero_profile/silero"
