Add examples page

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev = [
     "sphinx",
     "myst-parser",
     "pydata-sphinx-theme",
+    "sphinx-copybutton",
 ]
 [project.optional-dependencies]
 onnx-cpu = [
