--- a/src/nvbenjo/conf/huggingface.yaml
+++ b/src/nvbenjo/conf/huggingface.yaml
@@ -19,6 +19,9 @@ nvbenjo:
             precision: FP32
           AMP_FP16:
             precision: AMP_FP16
+        custom_batchmetrics:
+          # `tokens_per_batch / time_total_batch_normalized` to get tokens per second
+          tokens_per_second: 200.0
 
       gpt2:
         type_or_path: huggingface:openai-community/gpt2
@@ -35,6 +38,9 @@ nvbenjo:
           FP32:
             compile: false
             precision: FP32
+        custom_batchmetrics:
+          # `tokens_per_batch / time_total_batch_normalized` to get tokens per second
+          tokens_per_second: 90.0
 
       ast-audioset:
         type_or_path: huggingface:MIT/ast-finetuned-audioset-10-10-0.4593
@@ -51,6 +57,9 @@ nvbenjo:
             precision: AMP_FP16
           AMP_BFLOAT16:
             precision: AMP_BFLOAT16
+        custom_batchmetrics:
+          # `audio_duration / time_total_batch_normalized` to get real time factor
+          real_time_factor: 10.24
 
       openai/whisper-small:
         type_or_path: huggingface:openai/whisper-small
@@ -69,6 +78,9 @@ nvbenjo:
             precision: FP16
           FP32:
             precision: FP32
+        custom_batchmetrics:
+          # `audio_duration / time_total_batch_normalized` to get real time factor
+          real_time_factor: 30.0
 
       google/t5:
         type_or_path: huggingface:google/t5-v1_1-small
@@ -87,6 +99,9 @@ nvbenjo:
             precision: FP16
           FP32:
             precision: FP32
+        custom_batchmetrics:
+          # `tokens_per_batch / time_total_batch_normalized` to get tokens per second
+          tokens_per_second: 512.0
 
       mobilevit:
         type_or_path: huggingface:apple/mobilevit-small
@@ -103,3 +118,6 @@ nvbenjo:
             precision: AMP_FP16
           AMP_BFLOAT16:
             precision: AMP_BFLOAT16
+        custom_batchmetrics:
+          # `images_per_batch / time_total_batch_normalized` to get images per second
+          fps: 1
