--- a/tests/conf/small_single.yaml
+++ b/tests/conf/small_single.yaml
@@ -15,6 +15,8 @@ nvbenjo:
       - 1
       devices:
       - "cpu"
+      custom_batchmetrics:
+        fps: 1.0
       runtime_options:
         FP32:
           precision: FP32
