--- a/src/nvbenjo/conf/small.yaml
+++ b/src/nvbenjo/conf/small.yaml
@@ -6,7 +6,6 @@ nvbenjo:
   models:
       shufflenet:
         type_or_path: torchvision:shufflenet_v2_x0_5
-        kwargs: {}
         shape: [B, 3, 224, 224]
         num_warmup_batches: 1
         num_batches: 2
@@ -18,4 +17,5 @@ nvbenjo:
           run_FP16:
             precision: FP16
         custom_batchmetrics:
+          # Frames per seconds: `1.0 / time_total_batch_normalized`
           fps: 1.0
